--- a/FirstKadaiApp/Base.lproj/Main.storyboard
+++ b/FirstKadaiApp/Base.lproj/Main.storyboard
@@ -26,6 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
